# selenium_factory

./: .gitignore  LICENSE  README.md  pyproject.toml
src/selenium_factory/: __init__.py  firefox_factory.py
